# Datacorn

./: .clang-tidy  .gitignore  Datacorn.pro  README.md  es.ts  meson.build  regenerate_ts.sh  ts_list.txt
.github/workflows/: mac-os.yml  mingw-windows.yml  x64-linux.yml  x86-windows.yml
res/: es.ts  icon.icns  it.ts  lang.qrc  meson.build  res.qrc
src/: archetypes.hpp  card_database.hpp  main.cpp
src/gui/: confirm_dialog.cpp  confirm_dialog.hpp  confirm_dialog.ui  database_editor_widget.cpp  database_editor_widget.hpp  database_editor_widget.ui  flow_layout.cpp  main_window.cpp  main_window.hpp  main_window.ui  new_card_dialog.cpp  new_card_dialog.hpp  new_card_dialog.ui  sql_util.cpp  sql_util.hpp  trim_on_paste_line_edit.hpp
staticqt/: meson.build  windows_platform.cpp
